[package]
name = "asp-classic-parser"
version = "0.1.5"
edition = "2024"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
clap = "4.4"
serde_json = "1.0"

# For TTY detection
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "asp_classic_parser"
path = "src/lib.rs"

[[bin]]
name = "asp-classic-parser"
path = "src/main.rs"
