[package]
name = "asp-classic-parser"
version = "0.1.11"
edition = "2024"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
clap = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
# Added for self-update functionality
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
zip = "0.6"
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
thiserror = "1.0"
tempfile = "3.8"  # Added tempfile for temporary directory support

# OpenSSL is now conditionally included based on the target platform
[target.'cfg(not(windows))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[features]
# Enable the vendored feature by default for easier cross-compilation
default = ["vendored"]
# Modified vendored feature to handle Windows separately
vendored = ["reqwest/native-tls-vendored"]
vendored-openssl = ["reqwest/native-tls-vendored"]

# For TTY detection
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }
# On Windows, schannel (Windows native TLS) will be used automatically

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "asp_classic_parser"
path = "src/lib.rs"

[[bin]]
name = "asp-classic-parser"
path = "src/main.rs"
